--- a/app/views/spree/manage/orders/index.html.erb
+++ b/app/views/spree/manage/orders/index.html.erb
@@ -77,7 +77,7 @@
             <!-- <a href="" class="sort-lead_time">Status <i class="fa fa-sort"></i></a> -->
           </div>
           <div class="cel">
-            Approve
+            <%= sortable "approved", "Approve" %>
             <!-- <a href="" class="sort-price">Approve <i class="fa fa-sort"></i></a> -->
           </div>
           <div class="cel"></div>
