--- a/app/views/spree/manage/products/_variant_form.html.erb
+++ b/app/views/spree/manage/products/_variant_form.html.erb
@@ -3,6 +3,8 @@
 
 <div class="product-size-block">
   <div class="col1">
+    <%= f.label "Master?" %>
+    <%= f.check_box :is_master, class: "master-checkbox" %>
     <!-- <a href="" id="close-button"><i class="fa fa-times"></i></a> -->
   </div>
   <div class="col2">
