--- a/app/views/spree/manage/products/new.html.erb
+++ b/app/views/spree/manage/products/new.html.erb
@@ -17,3 +17,12 @@
     </div>
   <% end %>
 </div>
+
+<script>
+  $('.master-checkbox').click(function(event) {
+      $('.master-checkbox').each(function() {
+          this.checked = false;
+      });
+      this.checked = true;
+  });
+</script>
