--- a/app/views/spree/manage/products/_master_variant_form.html.erb
+++ b/app/views/spree/manage/products/_master_variant_form.html.erb
@@ -2,6 +2,11 @@
 
 
 <div class="product-size-block">
+  <div class="col1">
+    <%= f.label "Master?" %>
+    <%= f.check_box :is_master, class: "master-checkbox" %>
+    <!-- <a href="" id="close-button"><i class="fa fa-times"></i></a> -->
+  </div>
 
   <div class="col2">
     <div class="leftpart">
