--- a/app/views/spree/cust/orders/_line_item.html.erb
+++ b/app/views/spree/cust/orders/_line_item.html.erb
@@ -15,12 +15,16 @@
       <a href="<%= url %>" class="cel">Each</a>
       <a href="<%= url %>" class="cel"><%= line_item.single_money.to_html %></a>
       <div class="cel">
-        <div class="qty-block">
-          <div class="spin"><span class="minus"><i class="fa fa-minus"></i></span>
-            <!-- <input value="30" placeholder="Qty" class="qty_input"/> -->
-            <%= item_form.number_field :quantity, min: 0, class: "form-control line_item_quantity qty_input", size: 5 %>
-            <span class="plus"><i class="fa fa-plus"></i></span></div>
-        </div>
+        <% if params[:action] == 'edit' %>
+          <div class="qty-block">
+            <div class="spin"><span class="minus"><i class="fa fa-minus"></i></span>
+              <!-- <input value="30" placeholder="Qty" class="qty_input"/> -->
+              <%= item_form.number_field :quantity, min: 0, class: "form-control line_item_quantity qty_input", size: 5 %>
+              <span class="plus"><i class="fa fa-plus"></i></span></div>
+          </div>
+        <% else %>
+          <%= line_item.quantity %>
+        <% end %>
       </div>
       <a href="<%= url %>" class="cel"><%= line_item.display_amount.to_html unless line_item.quantity.nil? %></a>
 
