--- a/app/views/spree/cust/orders/show.html.erb
+++ b/app/views/spree/cust/orders/show.html.erb
@@ -18,8 +18,11 @@
 			<div class="orders-nav">
 				<!-- <a href="#" class="nav-left"><i class="fa fa-chevron-left"></i></a> -->
 				<span class="order-id">Order #<%= @order.number %>
+					<% if @order.shipments.any?{|s| s.state == 'received'} %>
+						<a href="<%= invoice_url(@order) %>">(View Invoice)</a>
+
 					<%# unless @order.delivery_date < DateTime.tomorrow.in_time_zone ||(@order.delivery_date == DateTime.tomorrow.in_time_zone && Time.current > @order.vendor.order_cutoff_time.in_time_zone)%>
-					<% unless @order.all_variants_past_cutoff? %>
+					<% elsif !@order.all_variants_past_cutoff? %>
 						<a href="<%= edit_order_url(@order) %>">Edit</a>
 					<% end %>
 				</span>
