--- a/app/views/spree/manage/orders/edit.html.erb
+++ b/app/views/spree/manage/orders/edit.html.erb
@@ -16,7 +16,12 @@
 			</div>
 			<div class="orders-nav">
 				<!-- <a href="#" class="nav-left"><i class="fa fa-chevron-left"></i></a> -->
-				<span class="order-id">Order #<%= @order.number %></span>
+				<span class="order-id">
+					Order #<%= @order.number %>
+					<% if @order.shipments.any?{|s| s.state == 'received'} %>
+						<a href="<%= manage_invoice_url(@order) %>">(View Invoice)</a>
+					<% end %>
+				</span>
 				<!-- <a href="#" class="nav-right"><i class="fa fa-chevron-right"></i></a> -->
 			</div>
 			<div id="date-form">
