--- a/app/views/spree/cust/orders/show.html.erb
+++ b/app/views/spree/cust/orders/show.html.erb
@@ -18,8 +18,10 @@
 			<div class="orders-nav">
 				<!-- <a href="#" class="nav-left"><i class="fa fa-chevron-left"></i></a> -->
 				<span class="order-id">Order #<%= @order.number %>
-					<% if @order.shipments.any?{|s| s.state == 'received'} %>
+					<% if @order.shipment_state == 'received' %>
 						<a href="<%= invoice_url(@order) %>">(View Invoice)</a>
+					<% elsif @order.shipment_state == 'shipped' %>
+						<a href="<%= receiving_url(@order.shipments.first) %>">(View Shipment)</a>
 
 					<%# unless @order.delivery_date < DateTime.tomorrow.in_time_zone ||(@order.delivery_date == DateTime.tomorrow.in_time_zone && Time.current > @order.vendor.order_cutoff_time.in_time_zone)%>
 					<% elsif !@order.all_variants_past_cutoff? %>
