--- a/app/views/spree/cust/orders/index.html.erb
+++ b/app/views/spree/cust/orders/index.html.erb
@@ -64,7 +64,7 @@
             <!-- <a href="" class="sort-lead_time">Status <i class="fa fa-sort"></i></a> -->
           </div>
           <div class="cel">
-            Shippment
+            Shipment
           </div>
           <div class="cel"></div>
         </div>
