--- a/app/views/spree/manage/products/show.html.erb
+++ b/app/views/spree/manage/products/show.html.erb
@@ -39,7 +39,7 @@
 		</div>
 		<div id="order-form">
 			<div class="order-product-list">
-        <% @product.variants_including_master.each do |variant| %>
+        <% @variants_including_master.each do |variant| %>
           <%= form_for :order, html: {class: "tRow"}, url: populate_manage_orders_path(format: 'js', index: variant.id), remote: true do |f| %>
 						<div class="cel">
 							<b>SKU #</b> <%= variant.sku %>
